Modify FindCommand to remove extra checks